chore: rename from sqletor-vscode to sqeletor.vscode

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sqeletor-vscode",
+  "name": "sqeletor.vscode",
   "displayName": "sqeletor.vscode",
   "description": "An opinionated Sql template",
   "version": "0.0.1",
