--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sqeletor.vscode",
-  "displayName": "sqeletor.vscode",
+  "name": "sqeletor-vscode",
+  "displayName": "sqeletor-vscode",
   "description": "An opinionated Sql template",
   "version": "0.0.1",
   "engines": {
